@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0

title US041 - Sub-Domain Model (Weather Data)

package "AirControlArea Aggregate" <<Rectangle>> {
    class AirControlArea <<entity, aggregate root>> {
        areaCode
    }
}

package "WeatherData Aggregate" <<Rectangle>> {

    class WeatherData <<entity, aggregate root>> {
        date
        windSpeed
        windDirection
        temperature
        pressure
        visibility
    }

    class WeatherSource <<value object>> {
        provider
        format
    }
}

WeatherData "1" *-- "1" WeatherSource : "imported from"
WeatherData "1" ..> "1" AirControlArea : "recorded for\n(by areaCode: String)"

@enduml